--- a/composer.json
+++ b/composer.json
@@ -2,14 +2,14 @@
     "name": "viaebay/magento2-connector",
     "description": "VIA-eBay - Magento 2 Connector",
     "type": "magento2-module",
-    "version": "1.0.4",
+    "version": "1.0.5",
     "keywords": ["ebay", "magento2"],
     "license": [
         "OSL-3.0",
         "AFL-3.0"
     ],
     "require": {
-        "php": "~5.5.0|~5.6.0|~7.0.0",
+        "php": "~5.5.0|~5.6.0|~7.0.0|~7.1.0",
         "php-http/message": "^1.6",
         "php-http/guzzle6-adapter": "^1.1",
         "php-http/multipart-stream-builder": "^1.0.0",
