--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "viaebay/magento2-connector",
-    "description": "VIA-eBay - Magento 2 Connector",
+    "name": "viaconnect/magento2-connector",
+    "description": "VIA-Connect - Magento 2 Connector",
     "type": "magento2-module",
-    "version": "1.0.7",
+    "version": "1.1.0",
     "keywords": ["ebay", "magento2"],
     "license": [
         "OSL-3.0",
@@ -10,10 +10,10 @@
     ],
     "require": {
         "php": "~5.5.0|~5.6.0|~7.0.0|~7.1.0",
-        "php-http/message": "^1.6",
-        "php-http/guzzle6-adapter": "^1.1",
+        "php-http/message": "^1.6.0",
+        "php-http/guzzle6-adapter": "^1.1.0",
         "php-http/multipart-stream-builder": "^1.0.0",
-        "ramsey/uuid": "^3.6",
+        "ramsey/uuid": "^3.7.0",
         "magento/framework": "*",
         "magento/module-backend": "*",
         "magento/module-bundle": "*",
